# carta

./: CLAUDE.md  README.md  pm2.json  pyproject.toml  ruff.toml  run.py  run_bot.py
.claude/: settings.local.json
.github/: copilot-instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 2025_11_07_1021-96d4cba3197c_initial_scheme.py  2025_11_07_1146-63da4a59e519_security.py  2025_11_22_1031-9db981b29d9f_change_image_to_url.py  2025_11_22_1655-07a4cd1bd035_add_oauth_states_table.py  2025_11_22_1657-6c6ec28674b9_fix_oauth_states_expires_at_timezone.py  2025_11_22_1706-c2426d74d07d_add_settings_table.py  2025_11_23_2242-ea2b46a86102_add_card_support_to_inventory.py  2025_11_23_2316-ed81bedc7a02_set_player_id_to_biginteger.py  2025_11_23_2317-59851fe4b5ef_rename_card_rarity_enum.py  2025_11_30_2223-4a9ebec07b2d_add_currency_field_to_player.py  2025_12_01_0929-9a3c473fc37e_add_admin_currency_event_types.py  2025_12_02_1547-5e0fa657cbf0_add_name_field_to_player_model.py  2025_12_02_1701-32593fe8498e_add_gacha_pity_and_pull_logging_system.py  2025_12_04_0009-9cb8c3fca24d_add_trade_event_types.py  2025_12_04_1506-83a7da4e5496_add_ranking_system_fields.py  2025_12_05_1546-b32969a684ab_add_rate_field_to_shop_items.py  2025_12_05_1736-5e6963bcc876_add_daily_bet_tracking_to_pvp_ranks.py
app/: main.py
app/api/: auth.py  card.py  card_pool.py  card_pool_card.py  dashboard.py  deck_card.py  event_log.py  inventory.py  player.py  pvp_challenge.py  pvp_rank.py  settings.py  shop_item.py  trade.py
app/core/: config.py  (+3 more)
bot/: command_tree.py  main.py  types.py
(+70 files in other folders)
